@@ -6,9 +6,9 @@ import com.lahiru.ims.common.dto.PaginationResponse;
 import com.lahiru.ims.common.dto.feature.AssetResponseDto;
 import com.lahiru.ims.common.enums.AssetType;
 import com.lahiru.ims.exception.NotFoundException;
-import com.lahiru.ims.feature.inventory.asset.mobile.Mobile;
-import com.lahiru.ims.feature.inventory.asset.mobile.MobileRepo;
-import com.lahiru.ims.feature.inventory.asset.mobile.MobileService;
+import com.lahiru.ims.feature.inventory.asset.mobile.MobileAsset;
+import com.lahiru.ims.feature.inventory.asset.mobile.MobileAssetRepo;
+import com.lahiru.ims.feature.inventory.asset.mobile.MobileAssetService;
 import com.lahiru.ims.feature.inventory.asset.mobile.dto.MobileAssetRequestDto;
 import com.lahiru.ims.feature.inventory.asset.mobile.dto.MobileAssetResponseDto;
 import com.lahiru.ims.feature.inventory.employee.Employee;
@@ -31,7 +31,6 @@ import com.lahiru.ims.feature.inventory.vendor.Vendor;
 import com.lahiru.ims.feature.inventory.vendor.VendorService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.modelmapper.PropertyMap;
 import org.modelmapper.TypeToken;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -40,10 +39,12 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+
 @Service
 @RequiredArgsConstructor
-public class MobileServiceImpl implements MobileService {
-    private final MobileRepo mobileRepo;
+public class MobileAssetServiceImpl implements MobileAssetService {
+    private final MobileAssetRepo mobileAssetRepo;
     private final ModelMapper modelMapper;
     private final ModelService modelService;
     private final StatusService statusService;
@@ -55,8 +56,8 @@ public class MobileServiceImpl implements MobileService {
     public static final String MOBILE = "Mobile";
     public final EmployeeService employeeService;
     @Override
-    public Mobile findOne(Integer id) throws Exception {
-        return mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
+    public MobileAsset findOne(Integer id) throws Exception {
+        return mobileAssetRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
     }
 
     @Override
@@ -77,7 +78,7 @@ public class MobileServiceImpl implements MobileService {
 
     @Override
     public List<StatusDto> getAllStatus() throws Exception {
-        List<Type> statusList = typeService.getAll(AssetType.MOBILE);
+        List<Status> statusList = statusService.getAll(AssetType.MOBILE);
         List<StatusDto> statusDtoList = modelMapper.map(statusList, new TypeToken<List<StatusDto>>() {
         }.getType());
         return (!statusDtoList.isEmpty()) ? statusDtoList : Collections.emptyList();
@@ -85,18 +86,30 @@ public class MobileServiceImpl implements MobileService {
 
     @Override
     public List<ManufacturerDto> getAllManufacturers() throws Exception {
-        return List.of();
+        List<Manufacturer> manufacturerList = manufacturerService.getAll(AssetType.MOBILE);
+        List<ManufacturerDto> manufacturerDtoList = modelMapper.map(manufacturerList, new TypeToken<List<StatusDto>>() {
+        }.getType());
+        return (!manufacturerDtoList.isEmpty()) ? manufacturerDtoList : Collections.emptyList();
     }
 
     @Override
-    public List<MobileAssetResponseDto> search(String serialNumber) throws Exception {
-        return List.of();
+    public List<MobileAssetResponseDto> search(String key) throws Exception {
+        if (key.isEmpty()) return List.of();
+        List<MobileAsset> mobileAssetList = mobileAssetRepo.search(key);
+        return mobileAssetList.stream().map(mobileAsset -> {
+            try {
+                return convertToDto(mobileAsset);
+            }
+            catch (Exception ignored){
+                return null;
+            }
+        }).filter(Objects::nonNull).toList();
     }
 
     @Override
     public PaginationResponse<MobileAssetResponseDto> findByPageWise(int page, int pageSize) throws Exception {
         Pageable pageable = PageRequest.of(page, pageSize);
-        Page<Mobile> mobilePage = mobileRepo.findAllByPageWise(pageable);
+        Page<MobileAsset> mobilePage = mobileAssetRepo.findAllByPageWise(pageable);
         try {
             List<MobileAssetResponseDto> responseDtoList = modelMapper
                     .map(mobilePage.stream().toList(),
@@ -113,51 +126,44 @@ public class MobileServiceImpl implements MobileService {
 
     @Override
     public List<MobileAssetResponseDto> findAll() throws Exception {
-        List<Mobile> activeMobile = mobileRepo.findAllActive();
-        List<MobileAssetResponseDto> mobileResponse = modelMapper.map(activeMobile, new TypeToken<List<AssetResponseDto>>() {
+        List<MobileAsset> activeMobileAsset = mobileAssetRepo.findAllActive();
+        List<MobileAssetResponseDto> mobileResponse = modelMapper.map(activeMobileAsset, new TypeToken<List<AssetResponseDto>>() {
         }.getType());
         return (!mobileResponse.isEmpty()) ? mobileResponse : Collections.emptyList();
     }
 
     @Override
     public MobileAssetResponseDto createOne(MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        Mobile mobile = convertToModel(mobileAssetRequestDto);
-        Mobile saveMobile = mobileRepo.save(mobile);
-        return convertToDto(saveMobile);
+        MobileAsset mobileAsset = convertToModel(mobileAssetRequestDto);
+        MobileAsset saveMobileAsset = mobileAssetRepo.save(mobileAsset);
+        return convertToDto(saveMobileAsset);
     }
 
     @Override
     public MobileAssetResponseDto updateOne(int id, MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        Mobile foundMobile = mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
-        Mobile updateMobile = convertToModel(mobileAssetRequestDto);
-        updateMobile.setId(foundMobile.getId());
-        Mobile updatedMobile = mobileRepo.saveAndFlush(updateMobile);
-        return convertToDto(updatedMobile);
+        if (!mobileAssetRepo.isActiveById(id)) throw new NotFoundException(MOBILE);
+        MobileAsset updateMobileAsset = convertToModel(mobileAssetRequestDto);
+        updateMobileAsset.setId(id);
+        MobileAsset updatedMobileAsset = mobileAssetRepo.saveAndFlush(updateMobileAsset);
+        return convertToDto(updatedMobileAsset);
     }
 
     @Override
     public MobileAssetResponseDto deleteOne(int id) throws Exception {
-        Mobile deleteMobile = mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
-        mobileRepo.softDeleteById(deleteMobile.getId());
-        return convertToDto(deleteMobile);
+        MobileAsset deleteMobileAsset = mobileAssetRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
+        mobileAssetRepo.softDeleteById(deleteMobileAsset.getId());
+        return convertToDto(deleteMobileAsset);
     }
     @Override
-    public Mobile convertToModel(MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        ModelMapper modelMapper1 = new ModelMapper();
-        modelMapper1.addMappings(new PropertyMap<MobileAssetRequestDto, Mobile>() {
-            @Override
-            protected void configure() {
-                skip(destination.getId());
-                skip(destination.getEmployee());
-                skip(destination.getStatus());
-                skip(destination.getModel());
-                skip(destination.getType());
-                skip(destination.getLocation());
-                skip(destination.getManufacturer());
-                skip(destination.getVendor());
-            }
-        });
-        Mobile mobile = modelMapper1.map(mobileAssetRequestDto, Mobile.class);
+    public MobileAsset convertToModel(MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
+        MobileAsset mobileAsset = new MobileAsset();
+
+        mobileAsset.setInvoiceNumber(mobileAssetRequestDto.getInvoiceNumber());
+        mobileAsset.setPurchaseDate(mobileAssetRequestDto.getPurchaseDate());
+        mobileAsset.setWarrantyExpireDate(mobileAssetRequestDto.getWarrantyExpireDate());
+        mobileAsset.setAssetNumber(mobileAssetRequestDto.getAssetNumber());
+        mobileAsset.setSerialNumber(mobileAssetRequestDto.getSerialNumber());
+
         Manufacturer manufacturer = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getManufacturer(), manufacturerService);
         Type type = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getType(), typeService);
         Model model = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getModel(), modelService);
@@ -165,26 +171,21 @@ public class MobileServiceImpl implements MobileService {
         Location location = locationService.findOne(mobileAssetRequestDto.getLocationId());
         Employee employee = genericDao.checkAndCreate(mobileAssetRequestDto.getEmployee(), employeeService);
         Vendor vendor = vendorService.findOne(mobileAssetRequestDto.getVendorId());
-        mobile.setLocation(location);
-        mobile.setManufacturer(manufacturer);
-        mobile.setType(type);
-        mobile.setModel(model);
-        mobile.setEmployee(employee);
-        mobile.setIsActive(true);
-        mobile.setStatus(status);
-        mobile.setVendor(vendor);
-        return mobile;
+        mobileAsset.setLocation(location);
+        mobileAsset.setManufacturer(manufacturer);
+        mobileAsset.setType(type);
+        mobileAsset.setModel(model);
+        mobileAsset.setEmployee(employee);
+        mobileAsset.setIsActive(true);
+        mobileAsset.setStatus(status);
+        mobileAsset.setVendor(vendor);
+        return mobileAsset;
     }
 
     @Override
-    public MobileAssetResponseDto convertToDto(Mobile mobile) throws Exception {
+    public MobileAssetResponseDto convertToDto(MobileAsset mobileAsset) throws Exception {
         try {
-            modelMapper.typeMap(Mobile.class, MobileAssetResponseDto.class).addMappings(mapper -> {
-                mapper.map(src ->
-                        src.getEmployee().getId(), MobileAssetResponseDto::setEmployee
-                );
-            });
-            return modelMapper.map(mobile, MobileAssetResponseDto.class);
+            return modelMapper.map(mobileAsset, MobileAssetResponseDto.class);
         } catch (Exception e) {
             throw new Exception(e);
         }
